alpm-types/src/relation/snapshots/composite::invalid_sonamev2_parser@case_2.snap
---
source: alpm-types/src/relation/composite.rs
---
error: invalid sonamev2
 | 
 | lib:libexample.so-abc
 |                  ^ expected end of input.
 | 
 = while parsing:
   alpm-sonamev2: (-abc)
   → invalid sonamev2
   → expected end of input.
